# JointPnP

./: README.md
gpu_sd_map/: .gitignore  CMakeLists.txt  gpu_conv_sd_map_env.yml  gpu_conv_sdm_ros.yml  package.xml  pick_n_place.yml  setup.py
gpu_sd_map/configs/: gripper_grads.rviz
gpu_sd_map/gripper_augmentation/: PLY2Binvox.txt  base.binvox  base.ply  base_hd.binvox  base_sd.binvox  finger.ply  finger_1.binvox  finger_sd.binvox  finger_split.ply  finger_sweep.binvox  finger_sweep.ply  finger_sweep_hd.binvox  finger_sweep_sd.binvox
gpu_sd_map/src/gpu_sd_map/: ConvProto.py  GenSDM.py  environment_manager.py  gripper_augment.py  ros_transforms_lib.py  test_voxel_reconstruct.py  transforms_lib.py
gpu_sd_map/srv/: AddObj2Env.srv  CreateEnv.srv
ll4ma_pick_n_place/: .gitignore  CMakeLists.txt  package.xml  setup.py  table_obj.yaml
ll4ma_pick_n_place/configs/: grasp_place_init.rviz  pick_n_place.rviz  scene.rviz  scene_test.rviz  segment_config.yaml
ll4ma_pick_n_place/envs/: corner4_a.yaml  corner4_b.yaml  corner5_a.yaml  corner6_a.yaml  corner6_b.yaml  corner7_a.yaml  multi3_a.yaml  packing3_a.yaml  packing4_a.yaml  packing4_b.yaml  packing6_a.yaml
ll4ma_pick_n_place/launch/: calibrate_secondary_camera.launch  iiwa_reflex.launch  publish_secondary_camera.launch  realsense_multicameras.launch  reflex_viz_prior.launch
ll4ma_pick_n_place/meshes/: table.dae
ll4ma_pick_n_place/scripts/: clutter_pick.py  inline.py  mesh_aug_viz.py  moveit_server.py  opt_trials.py  pick_for_place.py  pick_n_place_basic.py  pickle_objgrid.py  playback_session.py  real_robot_trials.py  sampler_pnp.py  scene_visualizer.py  sdf_viz.py  shelf_play.py  stacking.py  test_full_mode.py  test_gpu_sdm.py  test_grasps.py  test_moveit.py  test_scene_integration.py  test_sdm_queries.py
ll4ma_pick_n_place/src/ll4ma_pick_n_place/: collision_utils.py  (+12 more)
ll4ma_pick_n_place/srv/: CartPlan.srv  ExecPlan.srv  GetIK.srv  LiftUp.srv  Plan2Joint.srv  Plan2Pose.srv
(+39 files in other folders)
