<?xml version="1.0"?>
<package format="2">
  <name>ll4ma_pick_n_place</name>
  <version>0.0.0</version>
  <description>The ll4ma_pick_n_place package</description>
  <maintainer email="mohanrajemails@gmail.com">Mohanraj DS</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <url type="website">https://bitbucket.org/robot-learning/ll4ma_pick_n_place</url>
  <author email="mohanrajemails@gmail.com">Mohanraj DS</author>

  <depend>rospy</depend>
  <depend>grasp_pipeline</depend>
  <depend>gpu_sd_map</depend>
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
